# scubywasm

./: .gitmodules  Doxyfile  LICENSE  README.md
.github/workflows/: agents_ci.yml  docs_ci.yml  engine_ci.yml  release_ci.yml
agents/: .clang-format  Makefile  freestanding_agent.c  lua_agent.c  lua_agent.lua  scubywasm_agent.h
doc/: index.md
engine/: .clang-tidy  Makefile  engine.c  scubywasm_engine.h
engine/test/: engine_tests.c
tools/: .gitignore  pyproject.toml
tools/src/scubywasm/: __init__.py  agent.py  common.py  display.py  engine.py  game.py  server.py  service_runner.py  wasmmodule.py
