[project]
name = "scubywasm"
version = "0.1.0"
description = "Handy Python tools to run Subywasm games"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame-ce>=2.5.6",
    "wasmtime>=40.0.0",
]

[project.scripts]
scubywasm-run = "scubywasm.game:main"
scubywasm-server = "scubywasm.server:main"
scubywasm-show = "scubywasm.display:main"
scubywasm-service-runner = "scubywasm.service_runner:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
